--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,3 +1,9 @@
+# --- DevTools (solo en desarrollo) ---
+# Auto-restart cuando cambian clases/recursos. Requiere spring-boot:run con fork=true
+spring.devtools.restart.enabled=true
+# Sensibilidad (puedes ajustar si lo ves lento o demasiado sensible)
+spring.devtools.restart.poll-interval=2s
+spring.devtools.restart.quiet-period=1s
 spring.application.name=fastbank
 server.port=8080
 
